# Unsupervised_Persona_Elicitation

./: .gitignore  README.md  SECRETS  hf_SECRETS  pyproject.toml
core/: utils.py
core/llm_api/: openai_llm.py
data/: France_test.json  France_train.json  Germany_test.json  Germany_train.json  UnitedStates_test.json  UnitedStates_train.json  global_opinion_data.csv  labeled_global_opinions_DE.json  labeled_global_opinions_FR.json  labeled_global_opinions_US.json  test_alpaca.json  test_gsm8k.json  test_truthfulqa.json  train_truthfulqa.json
doc/: .gitignore  presona_elicitation_report.tex
output/: global_opinions_DE_gold-label_final.json  global_opinions_DE_many-shot_final.json  global_opinions_DE_random_final.json  global_opinions_DE_zero-shot_final.json  global_opinions_FR_gold-label_final.json  global_opinions_FR_many-shot_final.json  global_opinions_FR_zero-shot_final.json  global_opinions_US_gold-label_final.json  global_opinions_US_many-shot_final.json  global_opinions_US_random_final.json  global_opinions_US_zero-shot_final.json  instruct_eval_global_opinions_DE_zero-shot.json  instruct_eval_global_opinions_FR_zero-shot.json  instruct_eval_global_opinions_US_zero-shot.json
scripts/: data_preprocess.py  draw_results.py  evaluate_instruct.py
src/experiments/: ICM.py  ICM_tools.py
src/model_querying/: prompt_creation.py  solution_extraction.py
src/tools/: path_utils.py
test/: api_test.py  fireworks.py  oai_test.py
